# GF3D

./: .gitattributes  .gitignore  CMTSOLUTION  CMTSOLUTION_world_subset  MTX.py  README.md  STF.ipynb  cmtlocation.py  compressiontesting.py  demo.py  environment.yml  gcmt2southamerica.py  genindex.html  index.html  infrastructure-notes.md  objects.inv  plts.ipynb  postprocess.py  py-modindex.html  search.html  searchindex.js  setup.cfg  setup.py
.github/workflows/: deploy_gh_pages.yml
_downloads/0458541568024c9c3bf0e550aef34c48/: station_section.py
_downloads/0e3d3c83b902e206dc974bc917292145/: aligned_stations.py
_downloads/1174c04eaabe2cc0a1ee201a7bcef822/: run_single_seismogram.py
_downloads/19cc355b6f55ace51706dc6994e9cff0/: single_seismogram.ipynb
_downloads/2d96e887b11a1130800f03af9136bb84/: client_usage_demo.ipynb
_downloads/2f9fdf78f03e98c963fe8d341c351601/: aligned_stations.ipynb
_downloads/476a2bf38d00d6a8cf212c89501e9045/: make_subset.py
_downloads/4bd2de8877009ef3eb522ada8e6b4994/: simulation.ipynb
_downloads/5d9dd4e2f9f69e2cc358d96a48842d88/: client_usage_demo.py
_downloads/5fac43a18c84f4ce55e676c1edd41b1c/: single_seismogram.ipynb
_downloads/797d59565156da0f553f77b63563a102/: single_seismogram_db.py
_downloads/82aea9bdcdbb843b1e14cc6e0ea8fe19/: make_subset.ipynb
_downloads/9b0168ba6cd62b4d74295f79915446e1/: run_single_seismogram.ipynb
_downloads/9bf2ff258b760810f4e7853b687c614b/: run_station_section_db.ipynb
_downloads/a159c21e99ab7ff6674a1f93fafabd71/: station_section.ipynb
_downloads/bca83c3cefd1f323359ddd563f26cb6a/: station_section.ipynb
_downloads/c1099fc58aa6990df8680452cd9224e9/: run_make_subset.ipynb
_downloads/c608dabbbb99856048e67c5f97bb7e93/: single_seismogram_db.ipynb
_downloads/c8b8a05abd7c6370b46efce3e5733469/: run_aligned_stations.ipynb
_downloads/d016aebd8d1db8962115c69eaf0aa29e/: run_aligned_stations.py
_downloads/e57e678828259c22b7748b1a137df30d/: station_section_db.ipynb
_downloads/e79bf2274aeff1097b77279380b68f85/: run_single_seismogram_db.ipynb
_downloads/ea0feb246af97afa020891898c30835c/: station_section_db.py
_downloads/f0c939ccd2d0c823e899fc4a9cfad663/: run_station_section.ipynb
_modules/: index.html
_modules/gf3d/: seismograms.html  simulation.html  source.html
_sources/: index.rst.txt
_sources/tabs/: gf-extraction.rst.txt  gf-generation.rst.txt
demo/: demo.py
docs/source/: conf.py  index.rst
examples/client/: README.rst  client_usage_demo.html  index.html
examples/extras/: GSN_selection.py  README.rst  gcmt2globe.py  gcmt2southamerica.py  logo.py
examples/generation/: index.html  sg_execution_times.html  simulation.html  simulation.py
parts/api/: index.html
parts/gf-extraction/: index.html
scripts/: 3d_geocentric.py  STF.ipynb  alaska_event.py  alaska_event_section_map.py  alaska_event_section_map_sf_comp.py  colormap.ipynb  compressiontesting.py  element_subsampling.py  erf_and_gaussian.py  even_dist.py  event_section.py  frechet_derivatives.py  gcmt2southamerica.py  gmtmap.py  install_adios.py  java_data_only.py  java_event_section_map.py  load_land_areas.py  logo.py  map.py  meshplot.py  mpi_subset_test.py  optimize.py  optimize_animation.py  plot_geocentric.py  plot_label_test.py  plot_map.py  plot_source_histogram.py  plot_ttpoints.py  plotly_surface.py  plts.ipynb  plts.py  postprocess_hands_on.py  processadios.py  pygmtmaps.ipynb  single_seismogram.py  station_section.py  station_section_SA.py  station_section_align.py  station_selection.py  (+5 more)
src/GF3D/: logger.py  (+3 more)
tabs/: gf-extraction.html  gf-generation.html
tests/: test_catalog.py  test_source.py
testscripts/: h5pytest.py  h5pytest_2.py
workflow/: GF_LOCATIONS  README.md  config.toml  job.bash  reciprocal.toml  root.pickle  stations.txt  stations_BFO.txt  stations_gcmt.txt  workflow.py
(+242 files in other folders)
