[metadata]
# replace with your username:
name = lwsspy.GF
version = 0.0.1
author = Lucas Sawade
author_email = lsawade@princeton.edu
description = Green Function Database Creator and Accessor
long_description = file: README.md
long_description_content_type = text/markdown
maintainer_email = lsawade@princeton.edu
url = https://github.com/lwsspy/lwsspy.GF
project_urls =
    Documentation = https://lwsspy.github.io/lwsspy.GF
    TravisCI = https://travis-ci.com/github/lwsspy.GF
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
keywords = Fun, Education, Learning, Programming

[options]
# namespace_packages = lwsspy
package_dir =
    =src
packages = find_namespace:
python_requires = >=3.6
install_requires =
    numpy
    matplotlib
    # adios2
tests_require = pytest
zip_safe = False

[options.extras_require]
docs = sphinx;
tests = pytest; py

[options.entry_points]
console_scripts =
    gf-get-dt = lwsspy.GF.bin.print_dt_minT:print_dt_minT

[options.packages.find]
where = src