[metadata]
# replace with your username:
name = gf3d
version = 0.0.1
author = Lucas Sawade
author_email = lsawade@princeton.edu
description = 3D Green Function Database Creator and Accessor
long_description = file: README.md
long_description_content_type = text/markdown
maintainer_email = lsawade@princeton.edu
url = https://github.com/lsawade/GF3D
project_urls =
    Documentation = https://lsawade.github.io/GF3D
    TravisCI = https://travis-ci.com/github/lsawade/GF3D
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
keywords = Fun, Education, Learning, Programming

[options]
# namespace_packages = lwsspy
package_dir =
    =src
python_requires = >=3.10
install_requires =
    numpy
    matplotlib
    numpy
    obspy
    # adios2
tests_require = pytest
zip_safe = False

[options.extras_require]
docs =
    sphinx<6.0
    furo
    sphinx-design
    sphinx_togglebutton
    sphinx_gallery
    numpydoc
tests = pytest; py

[options.entry_points]
console_scripts =
    gf3d = gf3d.bin.gf3d_exec:cli
    gf-get-dt = gf3d.bin.print_dt_minT:print_dt_minT
    gf-get-nslices = gf3d.postprocess:get_number_of_slices_bin
    gf-processadios = gf3d.bin.processadios:bin
    gf-get-synthetics = gf3d.bin.get_synthetics:bin

[options.packages.find]
where = src